--- a/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -1,20 +1,22 @@
-<div class="flex justify-center w-full p-4">
-  <div
-    class="w-full m-2 border-2 max-w-400 bg-aTeam-100 rounded-xl border-aTeam-200"
-  >
-    <div class="flex items-center space-x-4">
+<div class="draft-container">
+  <div class="form-content">
+    <div class="pb-4 relative">
       <button
-        [routerLink]="['/', cancelPath]"
-        class="p-2 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
+        class="absolute top-2 left-2 md:top-4 md:left-4"
+        [routerLink]="'/' + draftPath"
+        mat-flat-button
       >
-        Cancel
+        Back
       </button>
-      <div>
-        <p class="text-3xl font-nasa">Edit League</p>
+      <div class="flex justify-center">
+        <h1 class="text-3xl font-bold text-center font-nasa">Edit League</h1>
       </div>
     </div>
-    @if (draftForm) {
-      <draft-form-core (formSubmitted)="editDraft($event)"></draft-form-core>
+    @if (draftParams) {
+      <draft-form-core
+        [params]="draftParams"
+        (formSubmitted)="editDraft($event)"
+      ></draft-form-core>
     } @else {
       <loading></loading>
     }
