--- a/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
@@ -1,13 +1,16 @@
-<div class="draft-new-container">
+<div class="draft-container">
   <div class="form-content">
-    <div class="page-title">
+    <div class="pb-4 relative">
       <button
-        [routerLink]="['/', draftPath]"
-        class="p-2 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
+        class="absolute top-2 left-2 md:top-4 md:left-4"
+        [routerLink]="'/' + draftPath"
+        mat-flat-button
       >
-        Cancel
+        Back
       </button>
-      <p class="text-3xl font-nasa">New League</p>
+      <div class="flex justify-center">
+        <h1 class="text-3xl font-bold text-center font-nasa">New League</h1>
+      </div>
     </div>
     <draft-form-core (formSubmitted)="newDraft($event)"></draft-form-core>
   </div>
