opponent form changes working

--- a/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -9,7 +9,7 @@
         Back
       </button>
       <div class="flex justify-center">
-        <h1 class="text-3xl font-bold text-center font-nasa">Edit League</h1>
+        <h1 class="text-3xl font-bold text-center font-nasa">Edit Draft</h1>
       </div>
     </div>
     @if (draftParams) {
