--- a/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
@@ -9,7 +9,7 @@
         Back
       </button>
       <div class="flex justify-center">
-        <h1 class="text-3xl font-bold text-center font-nasa">New League</h1>
+        <h1 class="text-3xl font-bold text-center font-nasa">New Draft</h1>
       </div>
     </div>
     <draft-form-core (formSubmitted)="newDraft($event)"></draft-form-core>
