--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -1,50 +1,65 @@
-<form
-  [formGroup]="opponentForm"
-  (ngSubmit)="onSubmit()"
-  (keydown.enter)="$event.preventDefault()"
-  class="p-2 m-2 space-y-3 shadow-md team bg-bTeam-300 shadow-bTeam-600 rounded-xl"
->
-  <div class="w-full p-2 lg:space-x-2 lg:flex">
-    <div
-      class="grid flex-shrink-0 w-full grid-cols-1 lg:w-112 sm:grid-cols-2 gap-x-2 lg:grid-cols-1 h-fit"
+@if (opponentForm) {
+  <mat-stepper
+    #stepper
+    class="pokemon-form-container alternate"
+    orientation="vertical"
+  >
+    <mat-step
+      state="details"
+      [stepControl]="opponentForm.controls.details"
+      errorMessage="Name is required."
     >
-      <div>
-        <label class="block mb-1 font-bold">Team Name</label>
-        <input
-          formControlName="teamName"
-          spellcheck="false"
-          placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-center rounded-full shadow-md placeholder:text-symbolColor-disabled text-symbolColor-main bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
-        />
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Stage</label>
-        <input
-          placeholder="Week 1"
-          spellcheck="false"
-          formControlName="stage"
-          class="w-full px-4 py-2 text-center rounded-full shadow-md text-symbolColor-main placeholder:text-symbolColor-disabled bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
-        />
-      </div>
-    </div>
+      <form [formGroup]="opponentForm.controls.details">
+        <ng-template matStepLabel>Details</ng-template>
+        <ng-template matStepContent>
+          <div class="details-form-container">
+            <div class="league-container details-container">
+              <mat-form-field>
+                <mat-label>Team Name</mat-label>
+                <input matInput formControlName="teamName" spellcheck="false" />
+              </mat-form-field>
+              <mat-form-field>
+                <mat-label>Coach Name</mat-label>
+                <input matInput formControlName="coach" spellcheck="false" />
+              </mat-form-field>
+              <mat-form-field>
+                <mat-label>Stage</mat-label>
+                <input matInput formControlName="stage" spellcheck="false" />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="button-bar">
+            <div class="button-spacer"></div>
+            <button type="button" mat-flat-button matStepperNext>Next</button>
+          </div>
+        </ng-template>
+      </form>
+    </mat-step>
+    <mat-step state="team">
+      <ng-template matStepLabel>Team</ng-template>
+      <ng-template matStepContent>
+        <div class="team-container">
+          <team-form
+            ruleset="Gen9 NatDex"
+            [teamArray]="opponentForm.controls.team"
+          ></team-form>
+        </div>
 
-    <div class="flex-grow min-h-full space-y-1">
-      <label class="font-bold" for="team">Team</label>
-      <div id="team" class="shadow-md rounded-xl">
-        <team-form formControlName="team"></team-form>
-      </div>
-    </div>
-  </div>
+        <div class="button-bar">
+          <button type="button" mat-flat-button matStepperPrevious>Back</button>
+          <div class="button-spacer"></div>
+          <button type="submit" mat-flat-button (click)="onSubmit()">
+            Submit
+          </button>
+        </div>
+      </ng-template>
+    </mat-step>
 
-  @if (!importing) {
-    <div class="flex justify-end w-full">
-      <button
-        type="submit"
-        class="w-24 p-1 mx-4 text-xl font-bold shadow rounded-xl bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-      >
-        Submit
-      </button>
-    </div>
-  }
-</form>
-<!-- {{ opponentForm.value | json }} -->
+    <ng-template matStepperIcon="details">
+      <mat-icon>info</mat-icon>
+    </ng-template>
+    <ng-template matStepperIcon="team">
+      <mat-icon>workspaces</mat-icon>
+    </ng-template>
+  </mat-stepper>
+}
