--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-edit/opponent-form-edit.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-edit/opponent-form-edit.component.html
@@ -1,21 +1,20 @@
-<div class="flex justify-center w-full p-4">
-  <div
-    class="w-full m-2 border-2 max-w-400 bg-bTeam-100 rounded-xl border-bTeam-200"
-  >
-    <div class="flex items-center space-x-4">
+<div class="draft-container alternate">
+  <div class="form-content">
+    <div class="pb-4 relative">
       <button
+        class="absolute top-2 left-2 md:top-4 md:left-4"
         [routerLink]="['/', draftPath, teamId]"
-        class="p-2 m-3 rounded-lg shadow-md bg-bTeam-300 hover:shadow shadow-bTeam-600"
+        mat-flat-button
       >
         Cancel
       </button>
-      <div>
-        <p class="text-3xl font-bold">Edit Opponent</p>
+      <div class="flex justify-center">
+        <h1 class="text-3xl font-bold text-center font-nasa">Edit Opponent</h1>
       </div>
     </div>
-    @if (opponentForm) {
+    @if (oppParams) {
       <opponent-form-core
-        [opponentForm]="opponentForm"
+        [params]="oppParams"
         (formSubmitted)="editMatchup($event)"
       ></opponent-form-core>
     } @else {
