update matchup format 1

--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -41,6 +41,7 @@
         <div class="team-container">
           <team-form
             ruleset="Gen9 NatDex"
+            [pokemonList$]="pokemonList$"
             [teamArray]="opponentForm.controls.team"
           ></team-form>
         </div>
