--- a/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-new/draft-form-new.component.html
@@ -12,6 +12,9 @@
         <h1 class="text-3xl font-bold text-center font-nasa">New Draft</h1>
       </div>
     </div>
-    <draft-form-core (formSubmitted)="newDraft($event)"></draft-form-core>
+    <draft-form-core
+      [params]="params"
+      (formSubmitted)="newDraft($event)"
+    ></draft-form-core>
   </div>
 </div>
