--- a/src/app/tools/quick-matchup/quick-matchup-base.component.html
+++ b/src/app/tools/quick-matchup/quick-matchup-base.component.html
@@ -8,10 +8,7 @@
   </div>
   <div class="flex justify-center w-full">
     <div class="w-full max-w-400">
-      <quick-matchup-form
-        [formData]="formData"
-        (formSubmitted)="getMatchupData($event)"
-      ></quick-matchup-form>
+      <quick-matchup-form></quick-matchup-form>
     </div>
   </div>
 } @else {
