--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-new/opponent-form-new.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-new/opponent-form-new.component.html
@@ -1,22 +1,19 @@
-<div class="flex justify-center w-full p-4">
-  <div class="w-full m-2 max-w-400 rounded-xl">
-    <div class="flex items-center space-x-4">
+<div class="draft-container alternate">
+  <div class="form-content">
+    <div class="pb-4 relative">
       <button
+        class="absolute top-2 left-2 md:top-4 md:left-4"
         [routerLink]="['/', draftPath, teamId]"
-        class="p-2 m-3 rounded-lg"
+        mat-flat-button
       >
         Cancel
       </button>
-      <div>
-        <p class="text-3xl font-bold">New Opponent</p>
+      <div class="flex justify-center">
+        <h1 class="text-3xl font-bold text-center font-nasa">New Opponent</h1>
       </div>
     </div>
-    @if (opponentForm) {
-      <opponent-form-core
-        (formSubmitted)="newMatchup($event)"
-      ></opponent-form-core>
-    } @else {
-      <loading></loading>
-    }
+    <opponent-form-core
+      (formSubmitted)="newMatchup($event)"
+    ></opponent-form-core>
   </div>
 </div>
